fix content jumping on theme toggle

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -822,6 +822,10 @@ html[data-theme="dark"] div[class^="tableOfContents"] {
   .footer__links {
     margin-bottom: 8px;
   }
+
+  img[class^="themedImage"] {
+    display: initial !important;
+  }
 }
 
 @media only screen and (max-width: 996px) {
